Bug 1914432 - Truncate tab titles without losing space to delete button r=sidebar-reviewers,jsudiaman
Differential Revision: https://phabricator.services.mozilla.com/D232397

UltraBlame original commit: d46ff0ed2b64c79cb58be37afa80ca9a27a34ee7

--- a/browser/components/sidebar/sidebar-tab-row.css
+++ b/browser/components/sidebar/sidebar-tab-row.css
@@ -67,9 +67,9 @@ secondary
 -
 button
 {
-visibility
+display
 :
-hidden
+none
 ;
 :
 host
@@ -79,9 +79,9 @@ hover
 )
 &
 {
-visibility
+display
 :
-visible
+inline
 ;
 justify
 -
@@ -106,5 +106,39 @@ column
 :
 span
 7
+;
+}
+:
+host
+{
+display
+:
+flex
+;
+}
+.
+fxview
+-
+tab
+-
+row
+-
+main
+{
+height
+:
+32px
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+flex
+:
+1
 ;
 }
